# symbolic-differentiation

./: .gitignore  CMakeLists.txt  main.cc  main.h
symdiff/: CMakeLists.txt  main.h
tests/: CMakeLists.txt  test.cc
